Added Registered User Ssection

--- a/index.html
+++ b/index.html
@@ -20,16 +20,24 @@
                     <h1>CRICKET CHAMPIONSHIP 2023</h1>
                     <h4>You are able to Register for this Championship,<Br>If your Age is between 20 to 24</h4>
                 </div>
-                <input type="text" placeholder="Enter Your Full Name"><Br>
-                <input type="text" placeholder="Enter Your Phone No"><Br>
-                <input type="text" placeholder="Enter Your Age"><br>
+                <input type="text" placeholder="Enter Your Full Name" id="name"><Br>
+                <input type="text" placeholder="Enter Your Phone No" id="phone"><Br>
+                <input type="text" placeholder="Enter Your Age" id="age"><br>
                 <button type="submit" onclick="register()"> Register Now </button>    
             </div>
         </div>
 
         <div class="right">
-            <div class="registerd-users">
-
+            <div class="right-title">
+                <h1>Registerd Users Information</h1>
+            </div>
+            <div class="heading">
+            <h1>Name</h1>
+            <h1>Phone No</h1>
+            <h1>Age</h1>
+        </div>
+            <div class="registerd-users" id="reg_user">
+               
             </div>
         </div>
     </div>
