--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 
         <div class="right">
             <div class="right-title">
-                <h1>Registerd Users Information</h1>
+                <h1>Registered Users Information</h1>
             </div>
             <div class="heading">
             <h1>Name</h1>
             <h1>Phone No</h1>
             <h1>Age</h1>
-        </div>
+            </div>
+            
             <div class="registerd-users" id="reg_user">
                
             </div>
